Fixed filtering of unrelated data from csvs

--- a/index.html
+++ b/index.html
@@ -69,10 +69,13 @@
       </div>
         
     <div class = "container" class = "display">
-        <!-- This will be the main canvas for drawing data to the screen -->
-        <canvas id = "dataWindow" width = 1920px>
-            Your browser does not support HTML5 Canvas
-        </canvas>
+      <div class = "panel panel-primary">
+        <div class = "panel-body" style = "overflow-x:scroll;">
+          <!-- This will be the main canvas for drawing data to the screen -->
+          <canvas id = "dataWindow" width = 1920px> Your browser does not support HTML5 Canvas.</canvas>
+        </div>
+        <div class = "panel-heading panel-primary">Data Display</div>
+      </div>
         </div>
 
       <hr>
