Functions for relating observations and finding transitive relats done; upgraded display

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Project name</a>
+          <a class="navbar-brand" href="#">Fish Transitivity</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           
@@ -72,7 +72,7 @@
       <div class = "panel panel-primary">
         <div class = "panel-body" style = "overflow-x:scroll;">
           <!-- This will be the main canvas for drawing data to the screen -->
-          <canvas id = "dataWindow" width = 1920px> Your browser does not support HTML5 Canvas.</canvas>
+          <canvas id = "dataWindow" width = 21500px> Your browser does not support HTML5 Canvas.</canvas>
         </div>
         <div class = "panel-heading panel-primary">Data Display</div>
       </div>
@@ -81,7 +81,7 @@
       <hr>
 
       <footer>
-<!--        <p>&copy; Company 2015</p>-->
+        <p style = "align-content: center;"><i> 2017 Alec Day for Dr. Ivan Chase - Department of Social and Behavioral Sciences at Stony Brook University</i></p>
       </footer>
     </div> <!-- /container -->        
 
