Added table for statistics, cleaned up some functions a bit

--- a/index.html
+++ b/index.html
@@ -100,6 +100,40 @@
 
       <hr>
 
+<!-- START STATISTICS TABLE -->
+      <h2 class = "text-center">Statistics</h2>
+      <table class = "table table-bordered">
+        <thead>
+        <tr>
+          <th>Triad</th>
+          <th>Total Time Transitive</th>
+          <th>Total Time Intransitive</th>
+        </tr>
+        </thead>
+        <tbody id ="tableBody">
+          <tr>
+            <td>1-2-3</td>
+            <td id = "tri123-tr"></td>
+            <td id = "tri123-in"></td>
+          </tr>
+          <tr>
+            <td>2-3-4</td>
+            <td id = "tri234-tr"></td>
+            <td id = "tri234-in"></td>
+          </tr>
+          <tr>
+            <td>3-4-1</td>
+            <td id = "tri341-tr"></td>
+            <td id = "tri341-in"></td>
+          </tr>
+          <tr>
+            <td>4-2-1</td>
+            <td id = "tri421-tr"></td>
+            <td id = "tri421-in"></td>
+          </tr>
+        </tbody>
+      </table>
+
       <footer>
         <p style = "align-content: center;"><i> 2017 Alec Day for Dr. Ivan Chase - Department of Social and Behavioral Sciences at Stony Brook University</i></p>
       </footer>
