Added average stats calculations and additions to table

--- a/index.html
+++ b/index.html
@@ -84,8 +84,10 @@
         <thead>
         <tr>
           <th>Triad</th>
-          <th>Total Time Transitive</th>
-          <th>Total Time Intransitive</th>
+          <th>Total Time Transitive (sec)</th>
+          <th>Total Time Intransitive (sec)</th>
+          <th>Avg Time Transitive (sec)</th>
+          <th>Avg Time Intransitive (sec)</th>          
         </tr>
         </thead>
         <tbody id ="tableBody">
@@ -93,21 +95,29 @@
             <td>1-2-3</td>
             <td id = "tri123-tr"></td>
             <td id = "tri123-in"></td>
+            <td id = "tri123-avgTr"></td>
+            <td id = "tri123-avgIn"></td>
           </tr>
           <tr>
             <td>2-3-4</td>
             <td id = "tri234-tr"></td>
             <td id = "tri234-in"></td>
+            <td id = "tri234-avgTr"></td>
+            <td id = "tri234-avgIn"></td>
           </tr>
           <tr>
             <td>3-4-1</td>
             <td id = "tri341-tr"></td>
             <td id = "tri341-in"></td>
+            <td id = "tri341-avgTr"></td>
+            <td id = "tri341-avgIn"></td>
           </tr>
           <tr>
             <td>4-1-2</td>
             <td id = "tri412-tr"></td>
             <td id = "tri412-in"></td>
+            <td id = "tri412-avgTr"></td>
+            <td id = "tri412-avgIn"></td>
           </tr>
         </tbody>
       </table>
