--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
             <input type="file" class="" id="inputfile"/>
             </div>
         </div>
+
       </div>
         
     <div class = "container" class = "display">
@@ -66,6 +67,7 @@
         </div>
         <div class = "panel-heading panel-primary" id="dispPanel">Data display
         <input id = "scaleSlider" type = "range" min = "0.25", max = "1" value = "1" step = "0.25">
+        <div class = "btn btn-warning" id ="export" disabled>Export Graph</div>        
         </div>
       </div>
         </div>
