--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta http-equiv="cache-control" content="max-age=0" />
+        <meta http-equiv="cache-control" content="no-cache" />
+        <meta http-equiv="expires" content="0" />
+        <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
+        <meta http-equiv="pragma" content="no-cache" />
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
 
         <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -63,10 +68,10 @@
       <div class = "panel panel-primary">
         <div class = "panel-body" style = "overflow-x:scroll;">
           <!-- This will be the main canvas for drawing data to the screen -->
-          <canvas id = "dataWindow" width = 21500px> Your browser does not support HTML5 Canvas.</canvas>
+          <canvas id = "dataWindow" width = 21500px height = 150px> Your browser does not support HTML5 Canvas.</canvas>
         </div>
-        <div class = "panel-heading panel-primary" id="dispPanel">Data display
-        <input id = "scaleSlider" type = "range" min = "0.25", max = "1" value = "1" step = "0.25">
+        <div class = "panel-heading panel-primary" id="dispPanel">Zoom Level
+        <input id = "scaleSlider" type = "range" min = "0.25", max = "1" value = "1" step = "0.01">
         <div class = "btn btn-warning" id ="export" disabled>Export Graph</div>        
         </div>
       </div>
