Custom Interaction Symbols supported

--- a/index.html
+++ b/index.html
@@ -61,7 +61,17 @@
             <input type="file" class="" id="inputfile"/>
             </div>
         </div>
-
+         <div class="col-md-8">
+           <h2>Interactions</h2>
+           <p>If your data set uses different symbols to mark interactions, please enter them here, separated by commas. (Symbols will take effect when a data set is loaded).</p>
+           <input type = "text" id ="actionFilter">
+           <div class="btn btn-success" href="#" role="button" id = "applyAF">Apply &raquo;</div>
+           Presets: 
+           <select id = "presets">
+             <option>---</option>             
+             <option>Fish</option>
+           </select>
+         </div>
       </div>
         
     <div class = "container" class = "display">
