Tested/works with chicken data

--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
            <select id = "presets">
              <option>---</option>             
              <option>Fish</option>
+             <option>Chicken</option>
            </select>
          </div>
       </div>
